--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Wix Warning",
+  "name": "Wix Warning!",
   "description": "Warn users when they are visiting a website hosted by Wix",
   "version": "0.1",
   "manifest_version": 3,
