--- a/package.json
+++ b/package.json
@@ -9,10 +9,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@babel/eslint-parser": "^7.22.15",
-    "eslint": "^8.52.0"
+    "@babel/eslint-parser": "^7.22.15"
   },
   "devDependencies": {
-    "prettier": "^3.2.5"
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "prettier": "^3.2.5",
+    "prettier-eslint": "^16.3.0",
+    "stylelint": "^16.2.1",
+    "stylelint-config-standard": "^36.0.0",
+    "stylelint-order": "^6.0.4",
+    "stylelint-prettier": "^5.0.0"
   }
 }
