--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -249,6 +249,6 @@
     ],
     "at-rule-no-unknown": null,
     "block-closing-brace-newline-before": "always",
-    "declaration-empty-line-before": null,
+    "declaration-empty-line-before": null
   }
 }
