No need to add prettier rules stylelint
  When extending stylelint-prettier/recommended we don't need to add
  prettier to the rules or plugins

--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,8 +1,7 @@
 {
   "extends": ["stylelint-prettier/recommended"],
-  "plugins": ["stylelint-order", "stylelint-prettier"],
+  "plugins": ["stylelint-order"],
   "rules": {
-    "prettier/prettier": true,
     "rule-empty-line-before": "always",
     "order/properties-order": [
       {
