--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -3,6 +3,7 @@
   "plugins": ["stylelint-order"],
   "rules": {
     "rule-empty-line-before": "always",
+    "order/order": ["custom-properties", "dollar-variables", "declarations", "rules", "at-rules"],
     "order/properties-order": [
       {
         "groupName": "special",
