--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
   "type": "module",
   "scripts": {
     "lint-staged": "lint-staged",
-    "prepare": "husky"
+    "prepare": "husky",
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
   },
   "lint-staged": {
-    "*.js": [ "eslint"],
+    "*.js": [
+      "eslint"
+    ],
     "*.{html,js}": "prettier -c"
   },
   "author": "",
@@ -19,6 +22,7 @@
     "eslint-config-prettier": "^9.1.0",
     "globals": "^14.0.0",
     "husky": "^9.0.11",
+    "jest": "^29.7.0",
     "lint-staged": "^15.2.2",
     "prettier": "^3.2.5",
     "stylelint": "^16.2.1",
